--- a/src/components/summaryPopup/style.css
+++ b/src/components/summaryPopup/style.css
@@ -27,3 +27,10 @@
     margin-top: 10px;
   }
   
+  .popup-buttons{
+    width: 100%;
+    display: flex;
+    gap: 10px;
+    align-items: center;
+    justify-content: end;
+  }
